# wug-infoblox-sync

./: .env.example  .gitignore  INFOBLOX_COMPARISON.md  README.md  pyproject.toml
config/: mapping.example.json
docker/mock-infoblox/: Dockerfile  app.py
src/wug_infoblox_sync/: __init__.py  app.py  config.py  infoblox_client.py  ip_utils.py  mapper.py  models.py  sync_service.py  wug_client.py
src/wug_infoblox_sync/templates/: index.html
terraform/aws/: README.md
terraform/azure/: README.md
terraform/proxmox/: README.md  cloud-init.yml  main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/proxmox/mock-infoblox/: cloud-init.yml  main.tf  terraform.tfstate  terraform.tfstate.1771361762.backup  terraform.tfvars  variables.tf
terraform/proxmox/mock-infoblox/tmp/: mock-infoblox-userdata.yml
tofu/: main.tf  terraform.tfvars.example
